Fix breaking layout on mobile

--- a/templates/static/css/pages.css
+++ b/templates/static/css/pages.css
@@ -99,6 +99,10 @@
 	padding-top: 50px;
 }
 
+ul.timeline {
+	padding-left: 0;
+}
+
 .timeline .profile-card .name {
 	font-size: 20px;
 }
